<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AddTreino"
            android:icon="@drawable/ic_fitness"
            android:title="@string/menu_addTreino" />
        <item
            android:id="@+id/nav_addFalta"
            android:icon="@drawable/ic_battery_20"
            android:title="@string/menu_addFalta" />
        <item
            android:id="@+id/nav_Historico"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_historico" />
        <item
            android:id="@+id/nav_apagarHistorico"
            android:icon="@drawable/ic_delete_forever"
            android:title="@string/menu_historicoDelete" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/txt_home" />
    </group>

</menu>
