<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollviewVertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/linearLayoutScrollHori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/Image_Logo"
                app:srcCompat="@drawable/logotipoacademia" />

            <TextView
                android:id="@+id/txt_frase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_blackitalic"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txt_Frase"
                android:textColor="@color/corLaranja"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/img_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/Image_Login"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/usuario" />

            <TextView
                android:id="@+id/txt_painelUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txt_PUsuario"
                android:textColor="@color/corLaranja"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/img_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/Image_Localizacao"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/gps" />

            <TextView
                android:id="@+id/txt_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_Localizacao"
                android:textColor="@color/corLaranja"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/img_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/Image_Info"
                app:srcCompat="@drawable/info" />

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_Informacoes"
                android:textColor="@color/corLaranja"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/feedback" />

</android.support.constraint.ConstraintLayout>