<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ActivityFeedback">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_formulario"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_frase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txt_fraseDeExplicacao"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="normal|italic" />

            <TextView
                android:id="@+id/txt_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_nome"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_nome"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_nav_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_email"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txt_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_descricaoFeed"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_descricao"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_descricao"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:background="@color/colorAccent"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/txt_enviar" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>