<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028">

        <TextView
            android:id="@+id/txt_Banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:fontFamily="serif"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/txt_Banner"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_email"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="400dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/txt_senha"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_Olhinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorBlack">

            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="400dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_entrar" />

        <TextView
            android:id="@+id/txt_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/txt_ou"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_Google"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>